--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -36,13 +36,13 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
+					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Descargar </a>
+					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Cambios </a>
 					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="../credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
-					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contact Us</button>
+					<a href="../credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Créditos </a>
+					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contacto</button>
 				</div>
 
 				<!-- secondary nav -->
@@ -51,7 +51,7 @@
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
 							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donar </span>
 							</button>
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 						<li class="relative text-[1.05rem]">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-400 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> Español </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -90,11 +90,11 @@
 										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
 									</li>
 
-									<li>
+									<li class="hidden">
 										<a href="/lang/kr" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
-										<a href="/lang/es" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Español </a>
+										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									
 								</ul>
@@ -137,16 +137,16 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
+					<a href="../" class="block text-gray-600 dark:text-gray-300">Inicio</a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Descargar</a>
+					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
-					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
+					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">Créditos</a>
+					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Español</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -161,14 +161,14 @@
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
-							<a href="/lang/es">Español</a>
+							<a href="/">English</a>
 							
-							<a href="/lang/kr">한국어</a>
+							<a href="/lang/kr" class="hidden">한국어</a>
 							<a href="/lang/id" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Donate</button>
+					<button class="mobile-donate-button block text-gold">Donar</button>
 				</div>
 			</div>
 		</nav>
@@ -227,7 +227,7 @@
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-white text-3xl">Donate via...</p>
+					<p class="pt-12 pb-8 font-light text-white text-3xl">Donar vía...</p>
 
 					<!-- donate options -->
 					<div class="flex items-center pb-4 space-x-4 px-8 lg:px-0">
@@ -347,18 +347,18 @@
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">Un producto del equipo PlayCover</h1>
 
 						<!-- alex credits -->
 						<div class="relative">
 							<!-- placeholder -->
-							<p class="text-lg text-transparent transition duration-200 ease-in-out">Presented by <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent transition duration-200 ease-in-out">Presentado por <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- text -->
-							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presented by <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presentado por <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- bg blur -->
-							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presented by <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presentado por <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 						</div>
 					</div>
 
@@ -398,10 +398,10 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="../legal-notice/" pr-4 hidden hover:text-yellow-500 underline text-left">Legal Notice</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
+						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
 					</div>
 
-					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
+					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Todos los derechos reservados.</p>
 				</section>
 			</div>
 		</footer>
