--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -87,10 +87,10 @@
 										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
+										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 
-									<li>
+									<li class="hidden">
 										<a href="/lang/kr" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
@@ -162,7 +162,7 @@
 							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
 							
-							<a href="/lang/kr">한국어</a>
+							<a href="/lang/kr" class="hidden">한국어</a>
 							<a href="/" class="flex flex-col items-center justify-center">English </a>
 						</div>
 					</div>
