added auto download links

--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -38,7 +38,7 @@
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="../" class="w-20 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Halaman Utama </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Unduhan </a>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Unduhan </a>
 					<a href="../changelog/" class="w-24 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Sejarah Perubahan </a>
 					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Pertanyaan umum </a>
 					<a href="../credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Kredit </a>
@@ -137,7 +137,7 @@
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Halaman Utama</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Unduhan</a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
 					<a href="./" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
 					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
 					<a href="../credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Kredit</a>
@@ -567,6 +567,7 @@
 
 		<!-- js -->
 		<script src="/js/language-button.js"></script>
+		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
 		<script src="/js/donate-popup.js"></script>
