--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
 					<a href="./changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
 					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
 					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
@@ -141,7 +141,7 @@
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
@@ -166,7 +166,6 @@
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
-							
 							<a href="/lang/kr" class="hidden">한국어</a>
 							<a href="/lang/id" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
 						</div>
@@ -198,7 +197,7 @@
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
 							<div class="flex items-center md:h-10 md:w-52">
-								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip"> Download for M1 Mac </a>
+								<a class="download-buttons py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href=""> Download for M1 Mac </a>
 							</div>
 
 							<!-- intel -->
@@ -531,10 +530,9 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="./legal-notice/" pr-4 hidden hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="./legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
-
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
 				</section>
 			</div>
@@ -547,6 +545,7 @@
 
 		<!-- js -->
 		<script src="/js/language-button.js"></script>
+		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
 		<script src="/js/donate-popup.js"></script>
