--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -42,7 +42,7 @@
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> 主页 </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
 					<a href="./changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
 					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
 					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
@@ -140,7 +140,7 @@
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">主页 </a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">下载 </a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
 					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
 					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
 					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
@@ -197,7 +197,7 @@
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
 							<div class="flex items-center md:h-10 md:w-56">
-								<a class="py-2 px-16 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip"> 下载 M1 Mac </a>
+								<a class="py-2 px-16 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href=""> 下载 M1 Mac </a>
 							</div>
 
 							<!-- intel -->
@@ -546,6 +546,7 @@
 
 		<!-- js -->
 		<script src="/js/language-button.js"></script>
+		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
 		<script src="/js/donate-popup.js"></script>
