--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -38,7 +38,7 @@
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Herunterladen </a>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Herunterladen </a>
 					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
 					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
 					<a href="../credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
@@ -138,7 +138,7 @@
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Herunterladen</a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
 					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
 					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
@@ -413,6 +413,7 @@
 
 		<!-- js -->
 		<script src="/js/language-button.js"></script>
+		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
 		<script src="/js/donate-popup.js"></script>
